# easylog

./: .gitignore  CMakeLists.txt  README.md
cmake/: Doxygen.cmake  EasyLogConfig.cmake  Install.cmake  ShellTest.cmake  clang_tidy.cmake  coverage.cmake
docs/: annotated.html  annotated_dup.js  classes.html  classyq_1_1base__log__msg-members.html  classyq_1_1base__log__msg.html  classyq_1_1base__log__msg__inherit__graph.map  classyq_1_1base__log__msg__inherit__graph.md5  classyq_1_1base__logger__core-members.html  classyq_1_1base__logger__core.html  classyq_1_1base__logger__core__inherit__graph.map  classyq_1_1base__logger__core__inherit__graph.md5  classyq_1_1base__output__handler-members.html  classyq_1_1base__output__handler.html  classyq_1_1base__output__handler.js  classyq_1_1base__output__handler__inherit__graph.map  classyq_1_1base__output__handler__inherit__graph.md5  classyq_1_1contains__stream__output__handler-members.html  classyq_1_1contains__stream__output__handler.html  classyq_1_1contains__stream__output__handler.js  classyq_1_1contains__stream__output__handler__coll__graph.map  classyq_1_1contains__stream__output__handler__coll__graph.md5  classyq_1_1contains__stream__output__handler__inherit__graph.map  classyq_1_1contains__stream__output__handler__inherit__graph.md5  classyq_1_1fstream__output__handler-members.html  classyq_1_1fstream__output__handler.html  classyq_1_1fstream__output__handler__coll__graph.map  classyq_1_1fstream__output__handler__coll__graph.md5  classyq_1_1fstream__output__handler__inherit__graph.map  classyq_1_1fstream__output__handler__inherit__graph.md5  classyq_1_1log__construct__error-members.html  classyq_1_1log__construct__error.html  classyq_1_1log__construct__error__inherit__graph.map  classyq_1_1log__construct__error__inherit__graph.md5  classyq_1_1log__fatal__error.html  classyq_1_1log__msg-members.html  classyq_1_1log__msg.html  classyq_1_1log__msg__coll__graph.map  classyq_1_1log__msg__inherit__graph.md5  classyq_1_1logger-members.html  classyq_1_1logger.html  (+84 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  concepts_0.js  files_0.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  searchdata.js
src/: CMakeLists.txt  easylog.hpp
src/easylog/: base.hpp  log_base.hpp  log_msg.hpp  logger.hpp  logger_core.hpp  output_handler.hpp
src/easylog/easylog/: log_base.hpp  log_msg.hpp  log_wrapper.hpp  logger_core.hpp  output_handler.hpp
test/: CMakeLists.txt  log_msg_test.cpp  logger_core_test.cpp  logger_test.cpp  main.cpp  output_handler_test.cpp
test/mocks/: log_msg_mock.hpp  logger_core_mock.hpp  output_handler_mock.hpp
test/shell/: CMakeLists.txt
test/shell/all_disable/: main.cpp  test.sh
test/shell/debug_disable/: main.cpp  test.sh
test/shell/fatal_test/: main.cpp  test.sh
test/shell/logwrapper/: main.cpp  test.sh
test/unit_test/: CMakeLists.txt  logger_core_test.cpp  logger_test.cpp  main.cpp  output_handler_test.cpp
test/unit_test/mocks/: log_msg_mock.hpp  logger_core_mock.hpp
